--- a/vt/specs/background/backgroundId.yaml
+++ b/vt/specs/background/backgroundId.yaml
@@ -14,7 +14,7 @@ presets:
         systemActions:
           nextLine: {}
 
-assets:
+resources:
   images:
     alkejf3la:
       fileId: lakjf3lka
