--- a/src/schemas/projectData/systemActions.yaml
+++ b/src/schemas/projectData/systemActions.yaml
@@ -150,4 +150,26 @@ properties:
     description: Clear all pending effects (internal action)
     additionalProperties: false
 
+  # move to system
+  # autoNext:
+  #   type: object
+  #   description: Auto-advancement behavior configuration
+  #   properties:
+  #     nextTrigger:
+  #       type: string
+  #       description: When to automatically advance
+  #       enum: [onComplete, manual, fromComplete]
+  #     delay:
+  #       type: number
+  #       description: Delay in milliseconds before auto-advance
+  #       minimum: 0
+  #     delayAfterComplete:
+  #       type: number
+  #       description: Delay after completion before auto-advance
+  #       minimum: 0
+  #     preventManual:
+  #       type: boolean
+  #       description: Whether to prevent manual advancement
+  #       default: false
+  #   additionalProperties: false
 additionalProperties: false
