--- a/vt/specs/animation/in.yaml
+++ b/vt/specs/animation/in.yaml
@@ -15,7 +15,7 @@ presets:
         systemActions:
           nextLine: {}
 
-assets:
+resources:
   images:
     alkejf3la:
       fileId: lakjf3lka
