--- a/vt/specs/choice/basic.yaml
+++ b/vt/specs/choice/basic.yaml
@@ -26,7 +26,7 @@ ui:
           direction: vertical
           children:
             $map:
-              $eval: 'choices.items'
+              $eval: 'choice.items'
             each(v,k):
               type: container
               x: 0
@@ -53,7 +53,7 @@ story:
           lines:
             - id: line1
               presentation:
-                choices:
+                choice:
                   layoutId: fi3l
                   items:
                     - text: Choice 1 a
