--- a/vt/specs/goToSceneSection/basic.yaml
+++ b/vt/specs/goToSceneSection/basic.yaml
@@ -17,7 +17,7 @@ presets:
         systemActions:
           nextLine: {}
 
-assets:
+resources:
   images:
     alkejf3la:
       fileId: lakjf3lka
@@ -43,7 +43,7 @@ story:
                   resourceId: alkejf3la
                   resourceType: image
             - id: line2
-              system:
+              systemActions:
                 goToSectionScene:
                   sectionId: 3k3s9sd
         3k3s9sd:
