--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "route-engine-js",
-  "version": "0.0.2-rc11",
+  "version": "0.0.2-rc12",
   "type": "module",
   "main": "dist/RouteEngine.js",
   "exports": {
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "immer": "^10.1.1",
-    "jempl": "^0.1.0",
+    "jempl": "0.2.0-rc1",
     "js-yaml": "^4.1.0",
     "puty": "^0.0.4-rc2"
   },
