add choice stests

--- a/vt/specs/choice/basic.yaml
+++ b/vt/specs/choice/basic.yaml
@@ -24,14 +24,47 @@ ui:
           y: 100
           direction: vertical
           children:
-            $for choice in choice.items:
+            - $when: choice.items[0]
               type: container
               x: 0
               y: 0
               height: 40
               children:
                 - type: text
-                  text: "${choice.content}"
+                  text: "${choice.items[0].content}"
+                  style:
+                    fontSize: 24
+                    fill: "white"
+            - $when: choice.items[1]
+              type: container
+              x: 0
+              y: 0
+              height: 40
+              children:
+                - type: text
+                  text: "${choice.items[1].content}"
+                  style:
+                    fontSize: 24
+                    fill: "white"
+            - $when: choice.items[2]
+              type: container
+              x: 0
+              y: 0
+              height: 40
+              children:
+                - type: text
+                  text: "${choice.items[2].content}"
+                  style:
+                    fontSize: 24
+                    fill: "white"
+            - $when: choice.items[3]
+              type: container
+              x: 0
+              y: 0
+              height: 40
+              children:
+                - type: text
+                  text: "${choice.items[3].content}"
                   style:
                     fontSize: 24
                     fill: "white"
